# pos-restaurant

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Modal.jsx  Toast.jsx
src/contexts/: AuthContext.jsx
src/lib/: db.js
src/pages/: InvoicesPage.jsx  LoginPage.jsx  MenuPage.jsx  OrderPage.jsx  PrintersPage.jsx  ReportsPage.jsx  SettingsPage.jsx  TablesPage.jsx  UsersPage.jsx
